--- a/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
+++ b/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
@@ -27,12 +27,12 @@
 		<div class="sidebar-content">
 			<ul class="nav flex-column" id="sidebarNav">
 				<!-- Dashboard -->
-				<li class="nav-item">
-					<a class="nav-link" href="/Home/Index">
-						<i class="fas fa-home nav-icon"></i>
-						<span class="nav-text">Dashboard</span>
-					</a>
-				</li>
+				@* <li class="nav-item"> *@
+				@* 	<a class="nav-link" href="/Home/Index"> *@
+				@* 		<i class="fas fa-home nav-icon"></i> *@
+				@* 		<span class="nav-text">Dashboard</span> *@
+				@* 	</a> *@
+				@* </li> *@
 
 				<!-- Master Data -->
 				<li class="nav-item">
@@ -43,7 +43,7 @@
 					</a>
 					<div class="collapse" id="masterDataCollapse" data-bs-parent="#sidebarNav">
 						<ul class="nav flex-column ms-3">
-							<li class="nav-item"><a class="nav-link" href="/Location/Index"><span class="nav-text">Locations</span></a></li>
+							@* <li class="nav-item"><a class="nav-link" href="/Location/Index"><span class="nav-text">Locations</span></a></li> *@
 							<li class="nav-item"><a class="nav-link" href="/Warehouse/Index"><span class="nav-text">Warehouses</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/Zone/Index"><span class="nav-text">Zones</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/Aisle/Index"><span class="nav-text">Aisles</span></a></li>
@@ -84,7 +84,7 @@
 						<ul class="nav flex-column ms-3">
 							<li class="nav-item"><a class="nav-link" href="/Inventory/Index"><span class="nav-text">Inventory List</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/Putaway/Index"><span class="nav-text">Putaway</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="/Picking/Index"><span class="nav-text">Picking</span></a></li>
+							@* <li class="nav-item"><a class="nav-link" href="/Picking/Index"><span class="nav-text">Picking</span></a></li> *@
 						</ul>
 					</div>
 				</li>
