--- a/WMS_DEPI_GRAD/wwwroot/css/site.css
+++ b/WMS_DEPI_GRAD/wwwroot/css/site.css
@@ -1,4 +1,4 @@
-* {
+﻿* {
     box-sizing: border-box;
 }
 
@@ -71,34 +71,30 @@ p {
 /* Hero Cover Section Styles */
 .hero-cover {
     position: relative;
-    height: 80vh; /* Reduced height to allow for footer to appear naturally */
+    height: 80vh;
     overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    margin-left: -250px; /* Offset for sidebar to start from screen edge */
-    margin-right: -2rem; /* Extend to right edge to account for content-wrapper padding */
-    margin-top: -2rem; /* Extend to top edge to account for content-wrapper padding */
-    width: calc(100vw + 2rem); /* Full viewport width plus content padding to eliminate white space */
-    left: 0;
+    width: 100vw; /* عرض الشاشة بالكامل */
+    margin: 0; /* بدون أي margins */
+    padding: 0;
 }
 
 .hero-image {
     position: absolute;
-    top: -10%; /* Expand the container slightly to avoid edge visibility */
-    left: -5%;
-    width: calc(110vw + 2rem); /* Increase width slightly */
-    height: 120%; /* Increase height slightly */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     z-index: 1;
 }
 
 .hero-bg-image {
-    width: 100%; /* Fill the expanded container */
+    width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: cover; /* تملأ الشاشة كاملة */
     object-position: center;
-    transform: scale(0.9); /* Zoom out by scaling down to 90% to show more of the image */
-    transform-origin: center;
 }
 
 /* Fallback background if image is not found */
