--- a/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
+++ b/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
@@ -119,21 +119,21 @@
 				</li>
 
 				<!-- Reports / Analytics -->
-				<li class="nav-item">
-					<a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#reportsCollapse">
-						<i class="fas fa-chart-bar nav-icon"></i>
-						<span class="nav-text">Reports</span>
-						<i class="fas fa-chevron-right ms-auto collapse-icon"></i>
-					</a>
-					<div class="collapse" id="reportsCollapse" data-bs-parent="#sidebarNav">
-						<ul class="nav flex-column ms-3">
-							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Stock Reports</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">PO / ASN Reports</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Inventory Movement</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Discrepancy Reports</span></a></li>
-						</ul>
-					</div>
-				</li>
+				@* <li class="nav-item"> *@
+				@* 	<a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#reportsCollapse"> *@
+				@* 		<i class="fas fa-chart-bar nav-icon"></i> *@
+				@* 		<span class="nav-text">Reports</span> *@
+				@* 		<i class="fas fa-chevron-right ms-auto collapse-icon"></i> *@
+				@* 	</a> *@
+				@* 	<div class="collapse" id="reportsCollapse" data-bs-parent="#sidebarNav"> *@
+				@* 		<ul class="nav flex-column ms-3"> *@
+				@* 			<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Stock Reports</span></a></li> *@
+				@* 			<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">PO / ASN Reports</span></a></li> *@
+				@* 			<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Inventory Movement</span></a></li> *@
+				@* 			<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Discrepancy Reports</span></a></li> *@
+				@* 		</ul> *@
+				@* 	</div> *@
+				@* </li> *@
 
 				<!-- Settings / Users -->
 				<li class="nav-item">
@@ -145,8 +145,8 @@
 					<div class="collapse" id="settingsCollapse" data-bs-parent="#sidebarNav">
 						<ul class="nav flex-column ms-3">
 							<li class="nav-item"><a class="nav-link" href="/User/Index"><span class="nav-text">User Management</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="/Role/Index"><span class="nav-text">Roles & Permissions</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="/Settings/Index"><span class="nav-text">System Settings</span></a></li>
+							@* <li class="nav-item"><a class="nav-link" href="/Role/Index"><span class="nav-text">Roles & Permissions</span></a></li> *@
+							@* <li class="nav-item"><a class="nav-link" href="/Settings/Index"><span class="nav-text">System Settings</span></a></li> *@
 							<li class="nav-item"><a class="nav-link" href="/Profile/Index"><span class="nav-text">Profile</span></a></li>
 							 @*<li class="nav-item"><a class="nav-link" href="/Home/Privacy"><span class="nav-text">Privacy</span></a></li>*@
 						</ul>
