--- a/WMS_DEPI_GRAD/Views/Inventory/Index.cshtml
+++ b/WMS_DEPI_GRAD/Views/Inventory/Index.cshtml
@@ -18,6 +18,11 @@
         </div>
 
         <div class="d-flex gap-2">
+            <a href="@Url.Action("Transactions")" class="btn btn-outline-info d-flex align-items-center gap-2">
+                <i class="fa-solid fa-list-ul"></i>
+                Transactions
+            </a>
+            
             <button class="btn btn-outline-secondary d-flex align-items-center gap-2" data-bs-toggle="modal" data-bs-target="#adjustModal">
                 <i class="fa-solid fa-sliders"></i>
                 Adjust
